--- a/app/src/main/res/layout/dialog_pick_rating.xml
+++ b/app/src/main/res/layout/dialog_pick_rating.xml
@@ -1,23 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="top|center"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="8dp">
 
-    <Button
-        android:id="@+id/add_rating"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
-
     <RatingBar
-        android:id="@+id/rating_bar"
+        android:id="@+id/user_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="false"
         android:numStars="5"
         android:stepSize="0.5" />
 </LinearLayout>
