Party erstellen über Service

--- a/app/src/main/res/layout/event_fragment_rating.xml
+++ b/app/src/main/res/layout/event_fragment_rating.xml
@@ -11,7 +11,7 @@
         android:id="@+id/add_rating"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Party bewerten" />
 
     <RatingBar
         android:id="@+id/rating_bar"
