--- a/app/src/main/res/layout/fragment_event_main.xml
+++ b/app/src/main/res/layout/fragment_event_main.xml
@@ -25,8 +25,9 @@
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_weight="0"
+                    android:padding="8dp"
                     android:contentDescription="@string/partypicture"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    app:srcCompat="@drawable/default_party" />
 
                 <LinearLayout
                     android:layout_width="65dp"
