--- a/app/src/main/res/layout/fragment_home_party.xml
+++ b/app/src/main/res/layout/fragment_home_party.xml
@@ -79,7 +79,8 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:scaleType="fitStart"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    android:padding="4dp"
+                    app:srcCompat="@drawable/default_party" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
