--- a/app/src/main/res/layout/fragment_ownevents_ownevent.xml
+++ b/app/src/main/res/layout/fragment_ownevents_ownevent.xml
@@ -47,7 +47,8 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:layout_weight="0"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    android:padding="4dp"
+                    app:srcCompat="@drawable/default_party" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
