--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,7 +23,7 @@
                     android:layout_width="140dp"
                     android:layout_height="140dp"
                     android:layout_marginTop="8dp"
-                    android:background="@color/black"
+                    android:background="@drawable/manu_avatar"
                     android:contentDescription="@string/todo"
                     android:scaleType="fitCenter"
                     app:layout_constraintEnd_toEndOf="parent"
