--- a/app/src/main/res/layout/activity_edit_event.xml
+++ b/app/src/main/res/layout/activity_edit_event.xml
@@ -27,7 +27,7 @@
                     android:layout_height="120dp"
                     android:layout_weight="0"
                     android:contentDescription="@string/partypicture"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    app:srcCompat="@drawable/manu_avatar" />
 
                 <LinearLayout
                     android:layout_width="65dp"
