--- a/app/src/main/res/layout/fragment_all_contacts.xml
+++ b/app/src/main/res/layout/fragment_all_contacts.xml
@@ -35,7 +35,8 @@
                     android:id="@+id/SearchText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/kontakte_durchsuchen" />
+                    android:hint="@string/kontakte_durchsuchen"
+                    android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
     </LinearLayout>
