--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -20,7 +20,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imageView9"
+                    android:id="@+id/edit_profile_picture"
                     android:layout_width="140dp"
                     android:layout_height="140dp"
                     android:layout_marginEnd="8dp"
@@ -42,7 +42,7 @@
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView9" />
+                    app:layout_constraintTop_toBottomOf="@+id/edit_profile_picture" />
 
                 <TextView
                     android:id="@+id/GenderTextEdit"
