--- a/app/src/main/res/layout/fragment_all_contacts.xml
+++ b/app/src/main/res/layout/fragment_all_contacts.xml
@@ -49,12 +49,7 @@
             android:id="@+id/layout_all_single_contacts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-            <SeekBar
-                android:id="@+id/seekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+            android:orientation="vertical" />
 
         <Button
             android:id="@+id/button_add"
