--- a/app/src/main/res/values/stringimprint.xml
+++ b/app/src/main/res/values/stringimprint.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ImpressumText">Impressum</string>
+    <string name="HelpHead">Hilfe</string>
+    <string name="HelpText">Hilfe zum Umgang mit dem Partyplaner "PaPla"
+\n\nMit Hilfe von PaPla können Sie als Benutzer ihre eigene Veranstalltung planen, organisieren und Ihre Freunde zu der Party einladen.
+\n\nHome:
+\nAuf der Home Seite des PaPla werden ihnen die Aktuell anstehenden Veranstaltungen angezeigt, die Sie erstellt haben oder wo sie zu eingeladen sind.
+\n\nProfil:
+\nDer Bereich Profil zeigt ihnen die von ihnen angegebenen Daten an und gibt ihnen die Möglichkeit diese zu verwalten, zu ändern und zu Erweitern. Hier steht ihnen die Möglichkeit zur Verfügung ihr Profilnamen und ihre E-Mailadresse einzusehen, ihr Geburtsdatum und ihr Geschlecht anzugeben sowie ein Individuelles Profilbild in ihrem Profil anzeigen zu lassen.
+Hier werden ihnen auch Ihre vergangenen und zukünftigen Veranstalltungen als Übersicht angezeigt.
+Auf dieser Seite können sie ihre Freunde, mit denen sie regelmäßig Veranstaltungen besuchen oder organisieren möchten, hinzufügen, damit sie diese bei weiteren Veranstalltungen einfacher finden können.
+\n\nEigene Veranstaltungen:
+\nAuf dieser Seite werden ihnen Ihre eigenen Veranstaltungen angezeigt. Es steht ihnen die Möglichkeit zur verfügung, eine neue eigene Veranstaltung zu erstellen und diese oder bereits bestehende Veranstaltungen zu bearbeiten oder zu löschen.
+Wenn sie eine neue Veranstaltung erstellen, müssen sie dieser einen Namen geben, bevor sie diese weiter bearbeiten.
+In der Party können sie weitere Informationen bearbeiten. Sie können ein Ort und eine Zeit anlegen. Sie können den Gastgeber eintragen und sie haben die Möglichkeit eine Beschreibung für ihre Party anzulegen.
+Weiter in der Bearbeitung der Partys besteht die Möglichkeit, eine Galerie zur nutzen. Hier können sie Bilder von z.B. der Location im Vorfeld der Party oder Bilder von der Party im Nachhinein anzeigen lassen, die alle eingeladenen Gäste sehen können.
+\n\nEigene Veranstaltung - Kommentare: In diesem Abschnitt können sie und ihre Gäste über die Party schreiben und sich austauschen.
+\n\nEigene Veranstaltung - Aufgabenliste: In diesem Abschnitt können sie Aufgaben an ihre Gäste verteilen.
+\nAls Beispiel: zum Grilabend soll jemand Marshmallows, Schokolade und Kekse mitbringen
+\n\nEigene Veranstaltung - Gästeliste:
+\nIn diesem Abschnitt können sie ihre eingeladenen Gäste einsehen.
+\n\nEigene Veranstaltung - To-Do-Liste:
+\nIn diesem Abschnitt können sie ihre Aufgaben übersichtlich gestalten ung ggf eine Kostenübersicht erstellen.
+\n\nEigene Veranstaltung - Abstimmung:
+\nIn diesem Abschnitt können sie und ihre Gäste über einige Eigenschaften ihrer Party abstimmen, falls Unklarheiten zu ihrer Party entstehen. Als Beispiel: Welche Pizza wird gewünscht?
+\n\nEigene Veranstaltung - Bewertung:
+\nIn diesem Abschnitt können sie und ihre Gäste ihre Party im Nachhinein bewerten. Was war gut? was war schlecht? </string>
     <string name="StreetText">Limbreede 10</string>
     <string name="CityText">32289 Rödinghausen</string>
     <string name="ContactText">Ansprechpartner: Andre Matutat</string>
