--- a/app/src/main/res/values/stringimprint.xml
+++ b/app/src/main/res/values/stringimprint.xml
@@ -3,29 +3,44 @@
     <string name="ImpressumText">Impressum</string>
     <string name="HelpHead">Hilfe</string>
     <string name="HelpText">Hilfe zum Umgang mit dem Partyplaner "PaPla"
-\n\nMit Hilfe von PaPla können Sie als Benutzer ihre eigene Veranstalltung planen, organisieren und Ihre Freunde zu der Party einladen.
-\n\nHome:
-\nAuf der Home Seite des PaPla werden ihnen die Aktuell anstehenden Veranstaltungen angezeigt, die Sie erstellt haben oder wo sie zu eingeladen sind.
-\n\nProfil:
-\nDer Bereich Profil zeigt ihnen die von ihnen angegebenen Daten an und gibt ihnen die Möglichkeit diese zu verwalten, zu ändern und zu Erweitern. Hier steht ihnen die Möglichkeit zur Verfügung ihr Profilnamen und ihre E-Mailadresse einzusehen, ihr Geburtsdatum und ihr Geschlecht anzugeben sowie ein Individuelles Profilbild in ihrem Profil anzeigen zu lassen.
-Hier werden ihnen auch Ihre vergangenen und zukünftigen Veranstalltungen als Übersicht angezeigt.
-Auf dieser Seite können sie ihre Freunde, mit denen sie regelmäßig Veranstaltungen besuchen oder organisieren möchten, hinzufügen, damit sie diese bei weiteren Veranstalltungen einfacher finden können.
-\n\nEigene Veranstaltungen:
-\nAuf dieser Seite werden ihnen Ihre eigenen Veranstaltungen angezeigt. Es steht ihnen die Möglichkeit zur verfügung, eine neue eigene Veranstaltung zu erstellen und diese oder bereits bestehende Veranstaltungen zu bearbeiten oder zu löschen.
-Wenn sie eine neue Veranstaltung erstellen, müssen sie dieser einen Namen geben, bevor sie diese weiter bearbeiten.
-In der Party können sie weitere Informationen bearbeiten. Sie können ein Ort und eine Zeit anlegen. Sie können den Gastgeber eintragen und sie haben die Möglichkeit eine Beschreibung für ihre Party anzulegen.
-Weiter in der Bearbeitung der Partys besteht die Möglichkeit, eine Galerie zur nutzen. Hier können sie Bilder von z.B. der Location im Vorfeld der Party oder Bilder von der Party im Nachhinein anzeigen lassen, die alle eingeladenen Gäste sehen können.
-\n\nEigene Veranstaltung - Kommentare: In diesem Abschnitt können sie und ihre Gäste über die Party schreiben und sich austauschen.
-\n\nEigene Veranstaltung - Aufgabenliste: In diesem Abschnitt können sie Aufgaben an ihre Gäste verteilen.
-\nAls Beispiel: zum Grilabend soll jemand Marshmallows, Schokolade und Kekse mitbringen
-\n\nEigene Veranstaltung - Gästeliste:
-\nIn diesem Abschnitt können sie ihre eingeladenen Gäste einsehen.
-\n\nEigene Veranstaltung - To-Do-Liste:
-\nIn diesem Abschnitt können sie ihre Aufgaben übersichtlich gestalten ung ggf eine Kostenübersicht erstellen.
-\n\nEigene Veranstaltung - Abstimmung:
+\n
+\nMit Hilfe von PaPla können Sie als Benutzer ihre eigene Veranstaltung planen, organisieren und Ihre Freunde zu der Party einladen.
+\n
+\nHome:
+\nAuf der Home Seite des PaPla werden ihnen die aktuell anstehenden Veranstaltungen angezeigt, die Sie erstellt haben oder zu denen sie eingeladen sind. Hier können sie zu jeder Party den Veranstalter, den Zeitpunkt und eine kleine Beschreibung ansehen.
+\n
+\nProfil:
+\nDer Bereich Profil zeigt ihnen die von ihnen angegebenen Daten an und gibt ihnen die Möglichkeit diese zu verwalten. Hier steht ihnen die Möglichkeit zur Verfügung ihren Profilnamen und ihre E-Mailadresse einzusehen, sowie ihr Geburtsdatum, Geschlecht und persönliches Profilbild anzeigen zu lassen.
+Hier werden ihnen auch Ihre vergangenen und zukünftigen Veranstaltungen als Übersicht angezeigt.
+\n
+\nKontakte:
+\nÜber Kontakte können sie ihre Kontakte verwalten und neue Kontakte hinzufügen.
+\n
+\nOptionen:
+\nÜber den Optionen Button in der rechten oberen Ecke können sie von überall aus auf ein Menü zugreifen, dass zum Partyersteller oder zur Profilbearbeitung führt.
+\n
+\nEigene Veranstaltungen:
+\nAuf dieser Seite werden ihnen Ihre eigenen Veranstaltungen angezeigt.
+\n
+\nVeranstaltung – Galerie:
+\nIn der Galerie können sie sich alle Bilder zu der Party anzeigen lassen und eigene Bilder hinzufügen.
+\n
+\nVeranstaltung - Aufgaben:
+\nIn dem Abschnitt Aufgaben können sie bestimmte Aufgaben an Gäste verteilen und dessen Status prüfen.
+\n
+\nVeranstaltung - ToDo-Liste:
+\nIn der ToDo-Liste können sie eigenen Aufgaben für sich selber eintragen und verwalten.
+\n
+\nVeranstaltung - Gäste:
+\nÜber den Abschnitt Gäste können sie Gäste einladen und einsehen, wer zu ihrer Party zu- oder abgesagt hat.
+\n
+\nVeranstaltung - Abstimmung:
 \nIn diesem Abschnitt können sie und ihre Gäste über einige Eigenschaften ihrer Party abstimmen, falls Unklarheiten zu ihrer Party entstehen. Als Beispiel: Welche Pizza wird gewünscht?
-\n\nEigene Veranstaltung - Bewertung:
-\nIn diesem Abschnitt können sie und ihre Gäste ihre Party im Nachhinein bewerten. Was war gut? was war schlecht? </string>
+\n
+\nVeranstaltung - Bewertung:
+\nIn diesem Abschnitt können sie und ihre Gäste ihre Party im Nachhinein bewerten.
+\n
+\nVeranstaltung - Kommentare: In diesem Abschnitt können sie und ihre Gäste über die Party schreiben und sich austauschen. </string>
     <string name="StreetText">Limbreede 10</string>
     <string name="CityText">32289 Rödinghausen</string>
     <string name="ContactText">Ansprechpartner: Andre Matutat</string>
