--- a/app/src/main/res/layout/fragment_single_contact.xml
+++ b/app/src/main/res/layout/fragment_single_contact.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/single_contact_layout"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="50dp"
+    android:longClickable="true">
 
     <ImageView
         android:id="@+id/button_delete"
@@ -23,21 +24,12 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:labelFor="@+id/contact_name"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
+        android:paddingTop="11dp"
         android:text="@string/horst_teesofa"
         android:textColor="@android:color/black"
-        android:paddingTop="11dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
         android:textSize="18sp"
-        tools:ignore="ContentDescription" />
-
-    <ImageView
-        android:id="@+id/button_contactsettings"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_weight="0"
-        android:padding="8dp"
-        app:srcCompat="@drawable/edit"
         tools:ignore="ContentDescription" />
 
 </LinearLayout>
