--- a/app/src/main/res/layout/fragment_event_main.xml
+++ b/app/src/main/res/layout/fragment_event_main.xml
@@ -21,12 +21,12 @@
                 android:padding="8dp">
 
                 <ImageView
-                    android:id="@+id/imageView7"
+                    android:id="@+id/party_picture"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_weight="0"
-                    android:padding="8dp"
                     android:contentDescription="@string/partypicture"
+                    android:padding="8dp"
                     app:srcCompat="@drawable/default_party" />
 
                 <LinearLayout
