--- a/app/src/main/res/layout/activity_create_poll.xml
+++ b/app/src/main/res/layout/activity_create_poll.xml
@@ -35,6 +35,7 @@
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:text="@string/poll_question"
+                        android:textColor="@android:color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
@@ -44,16 +45,15 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:hint="@string/poll_question_hint"
-                        android:inputType="textPersonName"
-                        android:textStyle="bold" />
+                        android:inputType="textPersonName" />
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/create_poll"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="0"
-                    android:text="@string/poll_send" />
+                    android:text="Erstellen" />
 
             </LinearLayout>
 
