--- a/app/src/main/res/layout/fragment_create_poll_option.xml
+++ b/app/src/main/res/layout/fragment_create_poll_option.xml
@@ -2,9 +2,9 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:stretchColumns="1"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:stretchColumns="1">
 
     <TableRow
         android:layout_width="match_parent"
