--- a/app/src/main/res/layout/activity_poll.xml
+++ b/app/src/main/res/layout/activity_poll.xml
@@ -22,6 +22,7 @@
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:text="@string/placeholder"
+                android:textColor="@android:color/black"
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
