--- a/app/src/main/res/layout/event_fragment_tasklist.xml
+++ b/app/src/main/res/layout/event_fragment_tasklist.xml
@@ -57,6 +57,7 @@
         android:id="@+id/body_tasklist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorAccent"
         android:orientation="vertical">
 
     </LinearLayout>
