Gast kann keine Abstimmung erstellen und Layoutanpassung

--- a/app/src/main/res/layout/event_fragment_poll.xml
+++ b/app/src/main/res/layout/event_fragment_poll.xml
@@ -9,5 +9,6 @@
         android:id="@+id/create_poll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:text="Neue Abstimmung" />
 </LinearLayout>
