--- a/app/src/main/res/layout/event_fragment_guestlist.xml
+++ b/app/src/main/res/layout/event_fragment_guestlist.xml
@@ -5,18 +5,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <LinearLayout
+    <Button
+        android:id="@+id/invite_user"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/invite_user"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Gast einladen" />
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="Gast einladen" />
 
     <TabHost
         android:id="@+id/tabhost"
