Der Gallerie können Bilder hizugefügt werden

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
     <color name="colorAccentLogo">#903da7</color>
-    <color name="black">#959595</color>
+    <color name="black">#409b9b9b</color>
     <color name="paplacolorPrimary">#5c258d</color>
     <color name="paplacolorSecondary">#4a6997</color>
     <color name="paplacolorSecondaryAccent">#4b679b</color>
