--- a/app/src/main/res/layout/event_fragment_guestlist.xml
+++ b/app/src/main/res/layout/event_fragment_guestlist.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:padding="8dp"
         android:text="Gast einladen" />
 
     <TabHost
