--- a/app/src/main/res/layout/event_fragment_single_comment.xml
+++ b/app/src/main/res/layout/event_fragment_single_comment.xml
@@ -12,13 +12,13 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/profile_picture"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_weight="0"
             android:contentDescription="@string/profile"
             android:padding="8dp"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            app:srcCompat="@drawable/manu_avatar" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,11 +64,12 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/comment_input_field"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:paddingStart="8dp"
-        android:paddingEnd="0dp">
+        android:paddingEnd="0dp"
+        android:paddingStart="8dp">
 
         <EditText
             android:id="@+id/comment_input"
