--- a/app/src/main/res/layout/event_fragment_single_comment.xml
+++ b/app/src/main/res/layout/event_fragment_single_comment.xml
@@ -55,10 +55,11 @@
                 android:id="@+id/comment_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/lorem_ipsum"
-                android:textColor="@android:color/black"
+                android:layout_weight="1"
                 android:paddingEnd="8dp"
-                android:paddingStart="0dp"/>
+                android:paddingStart="0dp"
+                android:text="@string/lorem_ipsum"
+                android:textColor="@android:color/black" />
 
         </LinearLayout>
     </LinearLayout>
